wip, refactor build to add k3replay (which does nothing as yet)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ SET(ALL_LIBS
 	"jansson"
 	"rdkafka"
 	"rdkafka++"
+	"config"
 )
 MESSAGE(STATUS "All linked libs: ${ALL_LIBS}")
 
@@ -48,6 +49,8 @@ ENDIF(BUILD_DEBUG)
 INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(main)
+ADD_SUBDIRECTORY(k3backup)
+ADD_SUBDIRECTORY(k3replay)
 IF(BUILD_TESTS) 
 	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DBUILD_TESTS" )
 	ADD_SUBDIRECTORY(test)
