--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,7 +10,7 @@ ENV AWS_SDK_CPP_VER_MAJOR ${AWS_SDK_CPP_VER_MAJOR:-1}
 ARG AWS_SDK_CPP_VER_MINOR
 ENV AWS_SDK_CPP_VER_MINOR ${AWS_SDK_CPP_VER_MINOR:-4}
 ARG AWS_SDK_CPP_VER_PATCH
-ENV AWS_SDK_CPP_VER_PATCH ${AWS_SDK_CPP_VER_PATCH:-62}
+ENV AWS_SDK_CPP_VER_PATCH ${AWS_SDK_CPP_VER_PATCH:-75}
 
 ENV AWS_SDK_CPP_VER "${AWS_SDK_CPP_VER_MAJOR}.${AWS_SDK_CPP_VER_MINOR}"
 ENV AWS_SDK_CPP_VERSION "${AWS_SDK_CPP_VER}.${AWS_SDK_CPP_VER_PATCH}"
@@ -53,7 +53,8 @@ ENV DEPS_BUILD_TOOLS \
 	jansson-dev \
 	libxml2-dev \
 	openssl-dev \
-	libssh2-dev 
+	libssh2-dev \
+	libconfig-dev
 
 ENV DEPS \
 	openssl-dev \
