Allow checksum to be shared between consumer and producer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(k3_SRCS
 	common/utils.cpp
 	common/consume.cpp
 	common/awsguard.cpp
+	common/checksum.cpp
 	common/kafkaconf.cpp
 	common/memchecker.cpp
 	common/messagetime.cpp
