wip on replay, storing for safety

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,11 +6,11 @@ FROM k3:sasl AS SASL_SOURCE_IMG
 FROM alpine:3.7
 
 ARG AWS_SDK_CPP_VER_MAJOR
-ENV AWS_SDK_CPP_VER_MAJOR ${AWS_SDK_CPP_VER_MAJOR:-1}
+#ENV AWS_SDK_CPP_VER_MAJOR ${AWS_SDK_CPP_VER_MAJOR:-1}
 ARG AWS_SDK_CPP_VER_MINOR
-ENV AWS_SDK_CPP_VER_MINOR ${AWS_SDK_CPP_VER_MINOR:-4}
+#ENV AWS_SDK_CPP_VER_MINOR ${AWS_SDK_CPP_VER_MINOR:-4}
 ARG AWS_SDK_CPP_VER_PATCH
-ENV AWS_SDK_CPP_VER_PATCH ${AWS_SDK_CPP_VER_PATCH:-93}
+#ENV AWS_SDK_CPP_VER_PATCH ${AWS_SDK_CPP_VER_PATCH:-93}
 
 ENV AWS_SDK_CPP_VER "${AWS_SDK_CPP_VER_MAJOR}.${AWS_SDK_CPP_VER_MINOR}"
 ENV AWS_SDK_CPP_VERSION "${AWS_SDK_CPP_VER}.${AWS_SDK_CPP_VER_PATCH}"
@@ -20,7 +20,7 @@ ENV RDKAFKA_VER_MAJOR ${RDKAFKA_VER_MAJOR:-0}
 ARG RDKAFKA_VER_MINOR
 ENV RDKAFKA_VER_MINOR ${RDKAFKA_VER_MINOR:-11}
 ARG RDKAFKA_VER_PATCH
-ENV RDKAFKA_VER_PATCH ${RDKAFKA_VER_PATCH:-4}
+ENV RDKAFKA_VER_PATCH ${RDKAFKA_VER_PATCH:-5}
 
 ENV RDKAFKA_VER "${RDKAFKA_VER_MAJOR}.${RDKAFKA_VER_MINOR}.${RDKAFKA_VER_PATCH}"
 
